--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <meta property="og:title" content="f!R3wA11Apt - Cybersecurity Resource Hub" />
     <meta property="og:description" content="Cybersecurity resource hub for CTF, penetration testing, and ethical hacking" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://ibb.co/FLsfT4TD" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
